--- a/Simulator/README
+++ b/Simulator/README
@@ -1,24 +1,27 @@
 Subdirectories
 ==============
+OpenGL/
+-------
+"main" and OpenGL dependent mouse/keyboard/graphics code.
 
 
-aircraft
---------
+aircraft/
+---------
 Structure and code to tie together all the pieces of an aircraft such
 as flight model, engine model, panel, controls, etc.
 
 
-controls
---------
+controls/
+---------
 Provide a standardized interface to all aircraft controls.
 
 
-flight
-------
+flight/
+-------
 Strucures and code to implement various flight models.  Provides a 
 standardized interface to all interesting flight model variabls.
 
 
-gltk
-----
-"main" and platform dependent mouse/keyboard/graphics code.
+scenery/
+--------
+Scenery parsing/generating code.
