--- a/Simulator/README
+++ b/Simulator/README
@@ -22,7 +22,7 @@ Strucures and code to implement various flight models.  Provides a
 standardized interface to all interesting flight model variabls.
 
 
-mat3/
+Math/
 -----
 Contains miscellaneous matrix/vector routines.
 
