--- a/Tools/README
+++ b/Tools/README
@@ -1,15 +1,19 @@
 1.  Start with file.dem
 
-2.  dem2node file tolerance^2 (meters)
+2.  dem2node file.dem tolerance^2 (meters)
 
-    - dem2node file 160000
+    - dem2node file.dem 160000
 
-3.  fixnode file.1
+3.  triangle -q file
 
-4.  tri2obj file.1
+4.  fixnode file
 
-5.  strip file.1.obj
+5.  tri2obj file.1
 
-6.  cp bands.d file.new.obj
+6.  strip file.1.obj
 
-7.  fixobj file.new
+7.  cp bands.d file-new.obj
+
+8.  fixobj file-new
+
+9.  cp file-new.1.obj .../Scenery/...
