--- a/Tools/TODO
+++ b/Tools/TODO
@@ -6,13 +6,16 @@
 
 1/14/98 -  Don't create shared corners or edges if one already exists.
 
+1/14/98 -  Reassemble triangles using only body, shared corners, and 
+           shared edges.
+
 
 --------------------------------------------------------------------------
 | Todo 
 --------------------------------------------------------------------------
 
-1/14/98 -  Reassemble triangles using only body, shared corners, and 
-           shared edges.
+1/15/98 -  Retro-fit tri2obj to use shared normals rather than regenerating
+           normals for shared vertices.
 
 1/12/98 -  Try reversing cw-wound strips rather than calling glFrontFace() 
            in the display list.
