--- a/Simulator/Todo
+++ b/Simulator/Todo
@@ -41,10 +41,18 @@
 
 1/16/98 -  Release verison 0.23
 
+1/17/98 -  Change all "type function();" to "type function( void );"
+
 
 --------------------------------------------------------------------------
 | Todo 
 --------------------------------------------------------------------------
+
+1/17/98 -  Compile with c++
+
+1/17/98 -  in all .h's change #ifdef FILE_H -> #ifdef _FILE_H
+
+1/17/98 -  Remove some of the unused files such as ls_sync.c
 
 12/29/97 - Scenery area manager
 
