--- a/Tools/Todo
+++ b/Tools/Todo
@@ -9,15 +9,20 @@
 1/14/98 -  Reassemble triangles using only body, shared corners, and 
            shared edges.
 
+1/19/98 -  Retro-fit tri2obj to use shared normals rather than regenerating
+           normals for shared vertices.
+
 
 --------------------------------------------------------------------------
 | Todo 
 --------------------------------------------------------------------------
 
-1/15/98 -  Retro-fit tri2obj to use shared normals rather than regenerating
-           normals for shared vertices.
-
 1/12/98 -  Try reversing cw-wound strips rather than calling glFrontFace() 
            in the display list.
 
+1/21/98 -  Generate an elevation quad tree.
+
 1/12/98 -  Generate a face adjacency matrix
+
+1/21/98 -  Remove internal shared edges and corners that are not needed
+           after an area is generated.
