--- a/Simulator/Thanks
+++ b/Simulator/Thanks
@@ -41,6 +41,10 @@ Michael I. Gold <gold@puck.asd.sgi.com> -- Patiently answered my endless
   fan.
 
 
+Charlie Hotchkiss <chotchkiss@namg.us.anritsu.com> -- Worked on improving
+  and enhancing the HUD code.  Lots of code style tips ...
+
+
 Bruce Jackson <e.b.jackson@larc.nasa.gov> 
   http://agcbwww.larc.nasa.gov/People/ebj.html -- Developed the
   LaRCsim code which we use to provide the flight model.  Also
