--- a/Simulator/Thanks
+++ b/Simulator/Thanks
@@ -42,7 +42,7 @@ Michael I. Gold <gold@puck.asd.sgi.com> -- Patiently answered my endless
 
 
 Charlie Hotchkiss <chotchkiss@namg.us.anritsu.com> -- Worked on improving
-  and enhancing the HUD code.  Lots of code style tips ...
+  and enhancing the HUD code.  Lots of code style tips and code tweaks ...
 
 
 Bruce Jackson <e.b.jackson@larc.nasa.gov> 
