--- a/Tools/Todo
+++ b/Tools/Todo
@@ -2,6 +2,10 @@
 | Done
 --------------------------------------------------------------------------
 
+4/6/98 -   fix 30 arcsec dem file processing
+
+4/6/98 -   incorporate autoconf/automake build system
+
 1/10/98 -  Split areas into smaller tiles
 
 1/14/98 -  Don't create shared corners or edges if one already exists.
