Code reorganizations.  Added a Lib/ directory for more general libraries.

--- a/Thanks
+++ b/Thanks
@@ -41,6 +41,10 @@ Didier Chauveau <chauveau@math.univ-mlv.fr>
   http://edcwww.cr.usgs.gov/landdaac/gtopo30/gtopo30.html
 
 
+Jeff Goeke-Smith <jgoeke@voyager.net>
+  Contributed our first autopilot.
+
+
 Michael I. Gold <gold@puck.asd.sgi.com> -- Patiently answered my endless
   "newbie" OpenGL questions.  His effort alone has made me a great SGI
   fan.
