--- a/Thanks
+++ b/Thanks
@@ -48,7 +48,7 @@ Jean-loup Gailly and Mark Adler <zlib@quest.jpl.nasa.gov>
 
 
 Jeff Goeke-Smith <jgoeke@voyager.net>
-  Contributed our first autopilot.
+  Contributed our first autopilot.  (Heading Hold)
 
 
 Michael I. Gold <gold@puck.asd.sgi.com> -- Patiently answered my endless
