--- a/Simulator/Todo
+++ b/Simulator/Todo
@@ -2,7 +2,8 @@
 | Todo 
 --------------------------------------------------------------------------
 
-4/25/98 -  Physically check if airport list overruns array size when loading.
+4/28/98 -  Write a perl script to rename -> *.[ch]xx to *.[ch]pp and update
+           #include entries as well.
 
 4/25/98 -  Roll all of Time/sunpos.cxx into Astro/sun.cxx
 
