--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+New in 0.45:
+* Added an option to enable/disable wireframe rendering.
+* Added an option to enable/disable fog/haze.
+* Added an option to enable/disable sky blending.
+* Added an option to select smooth/flat polygon shading.
+
 New in 0.44: 
 * Fixed a horible bug that cause the time to be *WAY* off when
   compiling with the CygWin32 compiler.
@@ -5,7 +11,7 @@ New in 0.44:
   on systems that have trouble building zlib.
 * Minor adjustment to texture coordinate generation to reduce texture
   swimming.
-* Added an option to enable/disable texture maps
+* Added a command line option to enable/disable texture maps
 * Minor transformation adjustments to try to keep scenery tiles closer
   to (0, 0, 0) GLfloats run out of precision at the distances we need
   to model the earth, but we can do a bunch of pre-transformations
