--- a/Thanks
+++ b/Thanks
@@ -78,6 +78,10 @@ Eric Mitchell <mitchell@mars.ark.com>
   Contributed some topnotch scenery textures.
 
 
+Anders Morken <amrken@online.no>
+  Maintains the European mirror of the FG web pages.
+
+
 Jonathan R Shewchuk <Jonathan_R_Shewchuk@ux4.sp.cs.cmu.edu>
   Author of the Triangle program.  Triangle is used to calculate the
   Delauney triangulation of our irregular terrain.
