--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 New in 0.48
+* Fixed a bug in zlib exposed by Borland Win32 compiler.
 * Impose a maximum triangle area during scenery generation so even
   very flat areas will get split into a few smaller sub triangles.
 * Fine grained (fragment level) view frustum culling.
