Updated configure.in to include a couple automake "conditionals" This allows us to conditionally compile alternative source files and introduce additional checks that aren't directly available within automake. Added Tools/DemInfo which dumps the DEM file header info.

--- a/Thanks
+++ b/Thanks
@@ -49,6 +49,12 @@ Francine Evans <evans@cs.sunysb.edu>
   Wrote the @#$@#$@% GPL'd tri-striper we use and "love". :-)
 
 
+Oscar Everitt <bigoc@premier.net>
+  Created single engine piston engine sounds as part of an F4U package
+  for FS98.  They are pretty cool and Oscar was happy to contribute
+  them to our little project.
+
+
 Jean-loup Gailly and Mark Adler <zlib@quest.jpl.nasa.gov>
   Authors of the zlib library.  Used for on-the-fly compression and
   decompression routines.
@@ -93,12 +99,6 @@ Anders Morken <amrken@online.no>
 Alan Murta <amurta@cs.man.ac.uk>
   http://www.cs.man.ac.uk/aig/staff/alan/software/
   Created the Generic Polygon Clipping library
-
-
-Oscar <bigoc@premier.net>
-  Created single engine piston engine sounds as part of an F4U package
-  for FS98.  They are pretty cool and Oscar was happy to contribute
-  them to our little project.
 
 
 Jonathan R Shewchuk <Jonathan_R_Shewchuk@ux4.sp.cs.cmu.edu>
