--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+New in 0.51
+* Translucent menus
+* Various HUD intensities so you can find something that is readable for the
+  current conditions and lighting.
+
 New in 0.50
 * HUD updates from Charlie Hotchkiss (ladder number rotate w/ ladder, control
   position indicators are back)
@@ -15,6 +20,7 @@ New in 0.50
 * added an enable/disable mouse pointer option
 * Ground collision detection.  You can now land or test for collision with
   any scenery surface.
+* Converted angle of attack scale into a radio altimeter.
 
 New in 0.49
 * Managment of multiple textures
