--- a/Thanks
+++ b/Thanks
@@ -118,6 +118,7 @@ Jonathan R Shewchuk <Jonathan_R_Shewchuk@ux4.sp.cs.cmu.edu>
 
 Michael Smith <msmith99@flash.net>
   Contributed cockpit graphics, 3d models, logos, and other images.
+  Project Bonanza - http://members.xoom.com/ConceptSim/index.html
 
 
 U.S. Geological Survey - http://edcwww.cr.usgs.gov/doc/edchome/ndcdb/ndcdb.html
